--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -2,6 +2,7 @@
 /public/build
 /public/hot
 /public/storage
+/resources/views/vendor
 /storage/*.key
 /vendor
 .env
@@ -16,3 +17,4 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+
